# ips_cam

./: .gitignore  AUTHORS.md  CMakeLists.txt  README.md  package.xml
.github/workflows/: build_test.yml
config/: test_params.yaml
config/ips_config_brio/: camera_intrinsics.yml  ics_params.yml  node_params.yaml  tracking.yml
docs/: Image_to_World.aux  Image_to_World.tex
include/ips_cam/: constants.hpp  conversions.hpp  image_processor.hpp  ips_cam_node.hpp  usb_cam.hpp  usb_cam_node.hpp  utils.hpp
include/ips_cam/formats/: av_pixel_format_helper.hpp  m420.hpp  mjpeg.hpp  mono.hpp  pixel_format_base.hpp  rgb.hpp  utils.hpp  uyvy.hpp  yuyv.hpp
src/: image_processor.cpp  usb_cam.cpp
src/ros2/: ips_cam_node.cpp  usb_cam_node.cpp
test/: test_image_processing.cpp  test_infra.cpp  test_node.cpp  test_pixel_formats.cpp  test_usb_cam_lib.cpp  test_usb_cam_utils.cpp
test/data/ips_config/: camera_intrinsics.yml  ics_params.yml  node_params.yaml  thingy.yml  tracking.yml
